# programmiersprachen-aufgabe-1

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
source/: CMakeLists.txt  coin.hpp  flip_coin.cpp  gcd.cpp  gcd.hpp  glossary.hpp  helloworld.cpp  math.cpp  math.hpp
tests/: CMakeLists.txt  test_gcd.cpp  test_main.cpp  tests_gcd.cpp  tests_math.cpp
